# AoCTemplate

./: CMakeLists.txt  main.cpp
